--- a/app/src/main/res/layout/fragment_training_view.xml
+++ b/app/src/main/res/layout/fragment_training_view.xml
@@ -11,20 +11,39 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
-        <!-- Тип тренировки -->
-        <TextView
-            android:id="@+id/training_type"
-            android:layout_width="wrap_content"
+        <!-- Карточка типа тренировки -->
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/material_card_view_training_type"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/training_type_label"
-            android:textSize="20sp"
+            android:clickable="true"
+            app:cardElevation="1dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:strokeColor="@android:color/transparent">
 
-        <!-- Продолжительность тренировки -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <!-- Тип тренировки -->
+                <TextView
+                    android:id="@+id/training_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/training_type_label"
+                    android:textSize="17sp" />
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+        <!-- Карточка продолжительности тренировки -->
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/materialCardView"
+            android:id="@+id/material_card_view_training_duration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
@@ -34,7 +53,7 @@
             app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/training_type"
+            app:layout_constraintTop_toBottomOf="@+id/material_card_view_training_type"
             app:strokeColor="@android:color/transparent">
 
             <LinearLayout
@@ -43,6 +62,7 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
+                <!-- Продолжительность тренировки -->
                 <TextView
                     android:id="@+id/training_duration"
                     android:layout_width="match_parent"
@@ -52,9 +72,9 @@
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
-        <!-- Дата тренировки -->
+        <!-- Карточка даты тренировки -->
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/materialCardView2"
+            android:id="@+id/material_card_view_training_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -64,7 +84,7 @@
             app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
+            app:layout_constraintTop_toBottomOf="@+id/material_card_view_training_duration"
             app:strokeColor="@android:color/transparent">
 
             <LinearLayout
@@ -73,6 +93,7 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
+                <!-- Дата тренировки -->
                 <TextView
                     android:id="@+id/training_date"
                     android:layout_width="match_parent"
@@ -91,10 +112,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />
+            app:layout_constraintTop_toBottomOf="@+id/material_card_view_training_date" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+    <!-- Кнопка для добавления упражнения -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -104,6 +125,5 @@
         android:layout_marginBottom="16dp"
         app:pressedTranslationZ="0dp"
         android:contentDescription="@string/fab_add_exercise"
-        app:srcCompat="@drawable/add_24px"
-        />
+        app:srcCompat="@drawable/add_24px" />
 </FrameLayout>
