--- a/app/src/main/res/layout/item_card_view.xml
+++ b/app/src/main/res/layout/item_card_view.xml
@@ -16,14 +16,14 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/tvTrainingType"
+            android:id="@+id/item_card_training_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/training_type_label"
             android:textAppearance="?attr/textAppearanceHeadline6" />
 
         <TextView
-            android:id="@+id/tvTrainingDuration"
+            android:id="@+id/item_card_training_duration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/training_duration_label"
@@ -31,7 +31,7 @@
             android:textAppearance="?attr/textAppearanceBody1" />
 
         <TextView
-            android:id="@+id/tvTrainingDate"
+            android:id="@+id/item_card_training_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/training_date_label"
